# students-record-keeping

./: .gitignore  README  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  README  main.py  pyproject.toml  requirements.txt
backend/app/: db.py  mysql_db.py
backend/app/db/: mysql_db.py  student_db.py  user_db.py
backend/app/models/: student.py  user.py
backend/app/routers/: students.py  users.py
backend/app/services/: student_service.py  user_service.py
backend/app/tests/: test_main.py  test_route_students.py  test_route_users.py  test_service_students.py  test_services_user.py
backend/app/utils/: loggin_config.py
backend/src/backend/app/models/: student.py  user.py
backend/src/backend/app/routers/: students.py
backend/src/backend/app/services/: student_service.py  user_service.py
backend/src/backend/app/tests/: test_service_students.py  test_tutorial.py
backend/src/backend/app/utils/: tutorial.py
database/: Dockerfile
database/init/: 01_Dump20251017.sql
frontend/: Dockerfile  README  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Message.tsx  NavBar.tsx  SmallButton.tsx  Spinner.tsx  TablePagination.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx
frontend/src/services/: apiClient.ts  studentService.ts  userService.ts
src/: App.tsx  main.tsx
src/components/: ProtectedRoute.tsx
src/context/: AuthContext.tsx
src/pages/: Dashboard.tsx  Home.tsx  Login.tsx
src/services/: apiClient.ts  userService.ts
(+3 files in other folders)
